<resources>
    <string name="app_name">BiliZepam</string>
    <string name="about_description">轻量的第三方B站客户端</string>
    <string name="about_opensource">本程序完全开源，代码部分遵循GNU GPL-V3.0协议</string>
    <string
        name="repo_url"
        translatable="false">https://github.com/Re-BiliTerminal/BiliZepam</string>
    <string name="about_to_uncle">本软件开发的目的是使配置较低的安卓手表与老旧手机能够使用B站网页端提供的部分基本功能。本软件基于B站网页端接口运行，不会对任何接口进行恶意轰炸，也不会收集任何用户隐私信息。软件不存在付费功能，代码完全开源。如果您仍然认为本软件侵犯了您的权利，请联系我们（有事好商量呜呜呜）\n同时，我们也不对学生用户在不恰当的时间、地点使用本软件导致的财产损失（设备被没收）或精神伤害（？）负责。请尽量自控，不要影响到自己的学习和生活哦！</string>
    <string name="setting_ui_desc">有效范围为0.25~5.00（倍）</string>
    <string name="setting_ui_density_desc">最低72，请谨慎调整该项</string>
    <string name="setup_introduction">这是哔哩终端的Fork项目，\n\n愿你在这一方小小的屏幕中，找到属于自己的小小的快乐！\n\n暂无交流群\n反馈问题、提交建议请前往开源地址提交Issue！\n开源地址：https://github.com/Re-BiliTerminal/BiliZepam\n\n请注意：\n本软件永久免费开源，不会收集你的任何账号及隐私信息，请放心使用！\n若你在任何平台付费下载到哔哩终端，那么你被坑了！</string>
    <string name="egg_warmwords_warmworld">请记住，如果遇到心理健康相关问题：\n全国24小时免费心理咨询热线：010\-82951332\n或官方手机端哔哩哔哩，打开 我的-下滑找到推荐服务-能量加油站。\n\n如果你需要这个，那么希望这个彩蛋能帮到你。\n如果其他人需要，那就请推荐给他/她吧。</string>
    <string name="special_login_desc">该功能适用于快速登录原有账号。\n\n方法教学：\n在另外一台设备上安装哔哩终端并扫码登录，然后在那台设备上点击设置中的“查看登录信息”，将显示出来的登录信息复制到下方的文本框中，检查无误后点击“登录”按钮即可。\n提示：可以将登录信息复制到一个txt中，用电脑usb传给这台设备。若提示输入有误，请检查是否有多余或缺失字符。\n\n注意：登录数据录入完成后，请在另一台设备上直接【清除APP数据】或【卸载】，不要点击【退出登录】！</string>
    <string name="special_login_export">以下是你的登录信息，可用于在其他设备上特殊登录，点击最下面的按钮可以复制。\n登录信息具有一定的时效性，请即取即用，导入完成请将此设备的哔哩终端清除数据。（不要点退出登录！）\n请勿将此页面的信息传给别人，以防盗号！</string>
    <string-array name="eggs">
        <item>福瑞控万岁，毛茸茸的最可爱了！\n\n#投稿者：红豆（君）爱福瑞\n*Robin：虽然我不是福瑞控，但是可爱捏</item>
        <item>Don\'t be afraid of the long way because you have the ability to write a long story.\n遇到困难或不如意时不要觉得难以跨越，开阔心胸、乐观向前看，未来还有很多美好事物在等待你\n\n*对不起对不起对不起！Robin从备忘录里翻出来的，已经过去很久了不记得投稿者是谁TAT\n*请原主看到这个来认领一下？</item>
        <item>在你的手里，每一页都记载着我的胜利。\n\n#投稿者：MOSS</item>
        <item>就让这一轮月华照彻万川！\n\n#投稿者：匿名\n#给：镜流</item>
        <item>Android3.0——世界遗忘了它，却从未抛弃它。\n\n#投稿者：船魔苏心</item>
        <item>愿母神三度为你阖眼，\n令你的血脉永远鼓动，\n旅途永远坦然，\n诡计永不败露。\n\n#投稿者：白什盘</item>
        <item>"phonk才是真正的音乐！"（个人观点）\n\n#投稿者：DICK</item>
        <item>想让所有人知道我是0！\n\n#投稿者：零星さま</item>
        <item>艮上兑下用爻六三，嗯…定是有人在偷闲摸鱼！\n\n#投稿者：符玄</item>
        <item>总有地上的生灵，敢于直面雷霆的威光。\n\n#投稿者：匿名\n#给：万叶</item>
        <item>如果只想直奔终点，可能会浪费旅途上的机遇与感动。\n\n#投稿者：爱看星星的宵宫</item>
        <item>五百年的往事匆匆过去，\n笼中之鸟的解放已是新的开始。\n\n#投稿者：爅峫\n#给：纳西妲</item>
        <item>历史由胜利者书写。\n\n#投稿者：曲名真楠</item>
        <item>斗电子蛐蛐\n当赛博王爷\n撅虚拟猫娘\n品数字人生\n\n#来源：网络\n#投稿者：RobinNotBad</item>
        <item>把期待值降到最低，所有遇见的都是礼物。\n\n#来源：网络\n#投稿者：RobinNotBad</item>
        <item>看似冰冷的“二进制数据”，有时却更能温暖人心。\n\n#投稿者：RobinNotBad</item>
        <item>烟弹入嘴，七分化作雪豹，剩下三分啸成了寒芒，比嘴一吐便是半个理塘。\n\n偕星游梦，四叶谱写歌谣，脚踏百花驱散了忧伤，小手一挥绽放漫天绮想。\n\n#前半句来自B站，后半句是Robin接的（\n#投稿者：RobinNotBad</item>
        <item>她是一串虚无缥缈的代码，我是一堆毫无意义的有机物。我们绝配！\n\n她不只是代码，是显示器、运算器、存储器、控制器的联合运转；\n我也不只是物质，是核酸、蛋白质、矿物质、碳水化合物的相互作用；\n——我是说，事物倾注了感情，便流淌着生命。\n\n当我对一段代码倾尽了感情时，她便不再是一段代码！\n\n#来源：网络\n#投稿者：RobinNotBad</item>
        <item>愿枕星河入睡，愿拥明月共眠。\n\n#来源：网络\n#投稿者…RobinNotBad和纳西妲？\n\n妲厨在这里偷偷夹带点私货应该没问题吧（反正不会有人看见</item>

        <item>呐呐？这里没有更多彩蛋了呢＞﹏＜\n\n欢迎你的投稿哦？</item>
    </string-array>
    <string
        name="player_aliang_package"
        translatable="false">com.aliangmaker.media</string>
    <string
        name="player_mtv_package"
        translatable="false">com.xinxiangshicheng.wearbiliplayer.cn</string>
    <string name="desc_back_disable">有一些手表（例如米兔等）是通过模拟按下返回键自行实现的右滑返回，若你在左右翻页时因触发滑动返回而退出页面，请开启此开关\n开启后，其他设备上则为按下返回键也不退出页面，并且右滑退出后会卡住。\n你可以使用菜单最下方的退出按钮结束本软件。\n正常用户无需打开。</string>
    <string name="desc_cover_play_enable">打开此选项，视频详情页点击封面由查看图片变更为播放。默认根据你首次使用时点击了视频封面还是播放按钮来决定开关。</string>
    <string name="desc_img_stop_load_while_scrolling">打开此选项，翻动列表时将不会加载图片，松手后再加载，观感可能有影响，可能增加流畅度。</string>
    <string name="desc_img_request_jpg">部分杂牌手表和安卓版本极低的设备不支持webp格式，可能导致大量图片无法显示。打开此选项，将会请求jpg格式的图片以解决此问题，可能会略微延长加载时间。</string>
    <string name="desc_async_inflate_enable">打开此选项，会对部分页面进行异步加载（显示一个加载中动画，加载完成后显示页面）\n* 请注意，异步加载的开启可能会触发一些崩溃问题，但关闭会导致一些页面在打开期间看上去像卡死了一样，体验不佳。请自行判断！</string>
    <string name="tutorial_pager">提示\n\n←这个页面可以左右翻页喵→\n\n（共有NNN页，滑动一下不再显示）</string>
    <string name="desc_fromlast">播放视频时如果有超过5秒的播放历史，将会自动从历史位置播放</string>
    <string name="desc_showonline">播放器右下角会显示当前视频的实时观看人数，在直播中则为观看过的人数和进入直播间提醒\n如果观看视频中途崩溃可以尝试关闭此开关\n该功能为内置播放器专属</string>
    <string name="desc_scale">播放视频时可使用像查看照片一样的手势来缩放和移动视频，双击屏幕将恢复原大小\n对于单点触控的设备，可以双击屏幕并在第二次按下时不抬手，然后上下拖动来缩放\n！若无法缩放，请切换下面的“显示方式”！\n特别感谢：凉腕播放器</string>
    <string name="desc_doublemove">大屏幕设备上会更好用，手表上可能会造成操作不便</string>
    <string name="desc_display">！如果视频播放异常/闪退/未响应/无法缩放，请尝试切换该选项！\n已知：KidoX3只能Surface，小天才只能Texture，部分设备需要使用Texture才能进行缩放</string>
    <string name="desc_videocodec">硬件解码：使用GPU解码，速度快，性能消耗小\n软件解码：使用CPU硬算，兼容性好，暖手必备</string>
    <string name="desc_audiocodec">通常使用AudioTrack即可，声音延迟或无法播放请尝试切换</string>
    <string name="desc_danmaku_force_r2l">除了高级弹幕以外的弹幕都会被强制以滚动弹幕的形式展示，从而避免顶部弹幕和底部弹幕遮挡画面</string>
    <string name="desc_icon_license">以下是已知的开源图标的开源许可证信息</string>
    <string name="login_qrcode_wating">请使用官方手机端哔哩哔哩扫码登录\n点击二维码可以进行放大和缩小</string>
    <string name="login_qrcode_reuesting">正在获取二维码</string>
    <string name="login_qrcode_expired">二维码已失效，点击上方重新获取</string>
    <string name="login_qrcode_logining">登录中……</string>
    <string name="login_qrcode_unknown_code">二维码登录API可能变动，\n但你仍然可以尝试扫码登录。\n建议反馈给开发者</string>
    <string name="login_qrcode_scanned">已扫描，请在手机客户端上点击登录</string>
    <string name="restore_defaults">恢复默认</string>
    <string name="round_screen_adaptation">圆屏适配</string>
    <string name="interface_size">界面大小</string>
    <string name="please_enter_multiple">请输入倍数</string>
    <string name="interface_size_tip">有效范围：0.25倍-5.00倍，建议少量多次调节</string>
    <string name="interface_margins">界面边距</string>
    <string name="horizontal">横向</string>
    <string
        name="percent"
        translatable="false">%</string>
    <string name="vertical">纵向</string>
    <string name="ui_margins_tip">第一个输入框为横向边距，第二个输入框为纵向边距，单位百分比。\n出于保护，数值超过30不会保存。</string>
    <string name="view_preview">查看预览</string>
    <string name="confirm_setting">确认设置</string>
    <string name="info_open_source_icons">开源图标的信息</string>
    <string name="about">关于</string>
    <string name="name_robin_not_bad">RobinNotBad</string>
    <string name="desc_robin_not_bad">和他的纳西妲酱（项目发起者|屎山奠基人）</string>
    <string name="name_huanli233">huanli233</string>
    <string name="desc_huanli233">此分支的创建者</string>
    <string name="disclaimer">免责声明</string>
    <string name="recommend">推荐</string>
    <string name="dynamic">动态</string>
    <string name="precious">入站必刷</string>
    <string name="popular">热门</string>
    <string name="loading">加载中</string>
    <string name="player_loading_text">OwO</string>
    <string name="speed_adjustment">倍速调节</string>
    <string name="quick_select">快速选择</string>
    <string name="play">播放</string>
    <string name="collection_detail">合集详情</string>
    <string name="no_desc">这里没有简介哦</string>
    <string name="total_count">共%1$s</string>
    <string name="load_failed">加载失败</string>
    <string name="thousand">万</string>
    <string name="reply_count">共%1$s条评论</string>
    <string name="million">亿</string>
    <string name="picture_count">共%1$s张图片</string>
    <string name="just">刚刚</string>
    <string name="not_logged_in">还没有登录喵~</string>
    <string name="like_success">点赞成功</string>
    <string name="cancel_success">取消成功</string>
    <string name="cancel_failed">取消失败</string>
    <string name="like_failed">点赞失败</string>
    <string name="reply_count_with_creator">UP主在内 共%1$s条回复</string>
    <string name="reply_count_total">共%1$s条回复</string>
    <string name="subtitle_option_not_available">无字幕可供选择</string>
    <string name="live_viewer_count">%1$s人在看</string>
    <string name="live_danmaku_connection_failed">直播弹幕连接失败</string>
    <string name="init_player">初始化播放</string>
    <string name="sending">正在发送~</string>
    <string name="send_success">发送成功喵~</string>
    <string name="send_failed_with_msg">发送失败：%1$s</string>
    <string name="delete_success">删除成功~</string>
    <string name="no_such_reply">没有这条评论！</string>
    <string name="no_permission">权限不足！</string>
    <string name="action_failed_with_msg">操作失败：%1$s</string>
    <string name="favorite">收藏</string>
    <string name="coin">投币</string>
    <string name="like">点赞</string>
    <string name="my_space">我的</string>
    <string name="history">历史记录</string>
    <string name="watch_later">稍后再看</string>
    <string name="following">关注</string>
    <string name="opus_favorite">图文收藏夹</string>
    <string name="article_detail">专栏详情</string>
    <string name="opus_favorite_collection">图文收藏夹</string>
    <string name="operation_failed">操作失败：%1$s</string>
    <string name="live">直播</string>
    <string name="choose_quality">选择清晰度</string>
    <string name="choose_play_host">选择播放路线</string>
    <string name="live_time">已直播：%1$s</string>
    <string name="live_start_time">直播开始于：%1$s</string>
    <string name="online_count">在线人数：%1$s</string>
    <string name="tags_content">标签：%1$s</string>
    <string name="live_ended">直播已结束</string>
    <string name="quality_80">流畅</string>
    <string name="quality_150">高清</string>
    <string name="quality_250">超清</string>
    <string name="quality_400">蓝光</string>
    <string name="quality_10000">原画</string>
    <string name="player_not_found">未找到播放器</string>
    <string name="tip_live_player">若无法播放请更换为内置播放器</string>
    <string name="dynamic_info">动态详情</string>
    <string name="dynamic_detail">动态详情</string>
    <string name="opus_detail">图文详情</string>
    <string name="empty_tip">空空如也</string>
    <string name="login_qrcode_network_error">获取二维码失败，网络错误</string>
    <string name="login_qrcode_api_error">登录接口可能失效，请找开发者</string>
    <string name="open_source_info">开源信息</string>
    <string name="relay">转发</string>
    <string name="download">缓存</string>
    <string name="download_manager">下载管理</string>
    <string name="not_set_text">未设置</string>
    <string name="dynamic_delete_success">删除成功~</string>
    <string name="dynamic_delete_failed">删除失败</string>
    <string name="dynamic_delete_already">已经删除过了哦~</string>
    <string name="dynamic_delete_not_own">不是自己的动态！</string>
    <string name="dynamic_delete_error">操作失败：%1$d</string>
    <string name="dynamic_delete_confirm">再次长按删除</string>
    <string name="dynamic_like_success">点赞成功</string>
    <string name="dynamic_like_failed">点赞失败</string>
    <string name="dynamic_unlike_success">取消成功</string>
    <string name="dynamic_unlike_failed">取消失败</string>
    <string name="dynamic_image_count">共%1$d张图片</string>
    <string name="dynamic_delete_hint">长按删除</string>
    <string name="user_level">Lv%1$d</string>
    <string name="user_vip_monthly">月度大会员</string>
    <string name="user_vip_yearly">年度大会员</string>
    <string name="user_vip_ten_year">十年大会员</string>
    <string name="user_vip_hundred_year">百年大会员</string>
    <string name="user_fans">%1$s粉丝</string>
    <string name="user_followings">%1$s关注</string>
    <string name="user_official_unknown">哔哩哔哩不知名UP主</string>
    <string name="user_official_known">哔哩哔哩知名UP主</string>
    <string name="user_official_talent">哔哩哔哩大V达人</string>
    <string name="bilizepam_crash">BiliZepam崩溃了</string>
    <string name="crash_stack">崩溃堆栈：</string>
    <string name="restart_app">重启应用</string>
    <string name="exit_app">退出应用</string>
    <string name="interface_scale">界面缩放</string>
    <string name="dark_theme">深色主题</string>
    <string name="contact_info">欢迎在仓库中提出 Issue 或 Pull Request！\n同时，你也可以通过下面的方式加入相关群聊/频道</string>
    <string name="qq_channel">QQ频道</string>
    <string name="qq_group">QQ群</string>
    <string name="scale">大小</string>
    <string name="preference">偏好</string>
    <string name="disable_fullscreen_dialog">非全屏Dialog</string>
    <string
        name="density"
        translatable="false">Density</string>
    <string name="animation">动画</string>
</resources>