<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <Preference
        app:title="@string/view_preview">
        <intent
            android:targetPackage="com.huanli233.biliterminal2"
            android:targetClass="com.huanli233.biliterminal2.ui.activity.setup.UiPreviewActivity" />
    </Preference>

    <PreferenceCategory
        app:title="@string/scale">
        <com.huanli233.biliterminal2.ui.preferences.FloatEditTextPreference
            app:key="ui_scale"
            app:title="@string/interface_scale"
            app:summary="@string/setting_ui_desc"
            app:defaultValue="1.0"
            app:minFloatValue="0.25"
            app:maxFloatValue="5.0" />
        <com.huanli233.biliterminal2.ui.preferences.IntEditTextPreference
            app:key="density"
            app:title="@string/density"
            app:summary="@string/setting_ui_density_desc"
            app:defaultValue=""
            app:emptyAllowed="true"
            app:minIntValue="72" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/preference">
        <SwitchPreferenceCompat
            app:key="round_mode"
            app:title="@string/round_screen_adaptation" />
        <SwitchPreferenceCompat
            app:key="animations"
            app:title="@string/animation" />
        <SwitchPreferenceCompat
            app:key="disable_fullscreen_dialog"
            app:title="@string/disable_fullscreen_dialog" />
    </PreferenceCategory>>

</androidx.preference.PreferenceScreen>