<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.huanli233.biliterminal2.ui.widget.components.TopBar
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleText="@string/about"
        app:layout_constraintTop_toTopOf="parent" />

    <com.huanli233.biliterminal2.ui.widget.scalablecontainer.AppScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/top_bar"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.huanli233.biliterminal2.ui.widget.wearable.BoxInsetLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/page_padding_horizontal"
                android:paddingBottom="@dimen/page_bottom_padding">

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@mipmap/icon"
                    android:contentDescription="@null"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="20dp" />

                <TextView
                    android:id="@+id/app_name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/icon"
                    android:layout_marginTop="4dp"
                    android:textStyle="bold"
                    android:textSize="16sp" />

                <com.huanli233.biliterminal2.ui.widget.views.MarqueeTextView
                    android:id="@+id/app_desc_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.85"
                    android:textSize="12sp"
                    android:maxLines="1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/app_name_text_view"
                    android:text="@string/about_description" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/version_name_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/app_desc_text_view"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="v1.0.0" />

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/version_name_chip"
                    android:layout_marginVertical="2dp"
                    app:dividerInsetStart="16dp"
                    app:dividerInsetEnd="16dp" />

                <TextView
                    android:id="@+id/open_source_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_opensource"
                    app:layout_constraintTop_toBottomOf="@+id/divider"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textSize="12sp"
                    android:layout_marginTop="5dp" />

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.Material3.Button.TextButton"
                    android:id="@+id/go_to_repo_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/open_source_info"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/repo_url" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/contact_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/go_to_repo_button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:contentPadding="8dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_info"
                        android:textSize="11sp" />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/qq_channel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/contact_card"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="6dp"
                    app:icon="@drawable/icon_public"
                    app:iconPadding="3dp"
                    android:text="@string/qq_channel" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/qq_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/qq_channel"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:icon="@drawable/icon_group"
                    app:iconPadding="3dp"
                    android:text="@string/qq_group" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/qq_group"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:contentPadding="8dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:textStyle="bold"
                            android:text="@string/disclaimer" />
                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_to_uncle"
                            android:textSize="11sp" />
                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.huanli233.biliterminal2.ui.widget.wearable.BoxInsetLayout>

    </com.huanli233.biliterminal2.ui.widget.scalablecontainer.AppScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>