<?xml version="1.0" encoding="utf-8"?>
<com.huanli233.bilizepam.ui.widget.scalablecontainer.AppScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:animScaleSV="false">

    <com.huanli233.bilizepam.ui.widget.wearable.BoxInsetLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxedEdges="top|bottom">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/page_padding_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/bilizepam_crash"
                android:gravity="center"
                android:textSize="18sp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="2dp"
                android:layout_marginTop="4dp"
                app:contentPadding="6dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/crash_stack"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                    <com.huanli233.bilizepam.ui.widget.views.ExpandableTextView
                        android:id="@+id/stack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:e_text="xxx.xxx.xxx.xxxException\nAt ...\nAt ...\nAt ...\nAt ...\nAt ..."
                        app:layout_constraintTop_toTopOf="parent"
                        app:e_collapsedLines="4"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/restart_btn"
                android:text="@string/restart_app"
                app:icon="@drawable/icon_refresh"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/exit_btn"
                android:text="@string/exit_app"
                app:icon="@drawable/icon_logout"
                android:layout_marginBottom="8dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </com.huanli233.bilizepam.ui.widget.wearable.BoxInsetLayout>

</com.huanli233.bilizepam.ui.widget.scalablecontainer.AppScrollView>